--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ test.py
 /docx_files/TACC_COVERLETTER_DELETE_L8R.docx
 /docx_files/Upshop_Cover_Letter_2024.docx
 /docx_files/roblox_cover_letter.docx
+/docx_files/example.docx
 
 /pdfs/Chase_Cover_Letter_Dec_2023.pdf
 /pdfs/Cover_Letter_Template.pdf
@@ -22,3 +23,4 @@ test.py
 /pdfs/Jan_Rubio_Wayfair_Cover_Letter_Nov_2023.pdf
 /pdfs/TACC_COVERLETTER_DELETE_L8R.pdf
 /pdfs/roblox_cover_letter_2023.pdf
+/pdfs/example.pdf
